<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditBarang"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_kode"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_kode"
                android:textStyle="bold"
                android:textColor="@color/red_500"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_nama"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama"
                android:textSize="20sp"
                android:autofillHints="Masukan nama obat."
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_satuan"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_satuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_satuan"
                android:textSize="20sp"
                android:autofillHints="Isikan type obat, seperti tablet, sirup, kapsul, dll"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_harga"
                android:textStyle="bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_harga"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:autofillHints="Isikan dengan harga obat." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_hapus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="4dp"
                android:text="@string/text_hapus"
                android:textColor="@color/red_500"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,TextContrastCheck" />


            <Button
                android:id="@+id/btn_batal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="4dp"
                android:text="@string/text_batal"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingVertical="4dp"
            android:text="@string/text_simpan"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,TextContrastCheck" />
    </LinearLayout>

</ScrollView>